--- a/nodebackend/package.json
+++ b/nodebackend/package.json
@@ -14,5 +14,10 @@
     "dependencies": {
         "express": "4.14.0",
         "morgan": "1.7.0"
+    },
+    "devDependencies": {
+        "mocha": "3.0.1",
+        "should": "10.0.0",
+        "supertest": "2.0.0"
     }
 }
