Ensures the todobackend-dev container depends on the db container

--- a/todobackend/docker/dev/docker-compose.yml
+++ b/todobackend/docker/dev/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - MYSQL_USER
       - MYSQL_PASSWORD
       - TEST_OUTPUT_DIR
+    depends_on:
+      - db
 
   cache:
     build:
