Adds the builder container for building the application using python wheels

--- a/todobackend/docker/dev/docker-compose.yml
+++ b/todobackend/docker/dev/docker-compose.yml
@@ -20,12 +20,24 @@ services:
     depends_on:
       - db
 
+  builder:
+    build:
+      context: ../../
+      dockerfile: docker/dev/Dockerfile
+    volumes:
+      - ../../target:/wheelhouse
+    volumes_from:
+      - cache
+    entrypoint: "entrypoint.sh"
+    command: ["pip", "wheel", "--no-index", "-f /build", "."]
+
   cache:
     build:
       context: ../../
       dockerfile: docker/dev/Dockerfile
     volumes:
       - /tmp/cache:/cache
+      - /build
     entrypoint: "true"
     container_name: "cache"
 
